--- a/Webpack/WebPack_Code/public/index.html
+++ b/Webpack/WebPack_Code/public/index.html
@@ -10,6 +10,7 @@
     <div class="box"></div>
     <div class="box1"><div></div></div>
     <div class="box2"><div></div></div>
-    <script src="../dist/main.js"></script>
+    <span class="iconfont icon-on_foot"></span>
+    <script src="../dist/static/js/main.js"></script>
   </body>
 </html>
